# food

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: __init__.py  admin.py  chat.py  conversations.py  preferences.py
backend/app/db/: __init__.py  database.py  models.py
docs/docs/: intro.md
frontend/src/: index.css
frontend/src/components/: ChatComposer.tsx  Header.tsx  PreferencesSummary.tsx
